	# tried to set env variables instead of putting details plainly
	# env variables did not work, need to try again. for tomorrow.


18/08/2024

Added Work Section
	# Added work page which display all the previous experiences
	# created a model for the previous experiences
	# created templatetags and custom_filters.py to find the modulus
	# all experiences will be placed in order reverse of the previous
	# all images are present in s3 buckets.


19/08/2024

Added Individual work section
	# Added new html template, views and urls which can open individual work page
	# Took out details from database and displayed in page.
	# Connected this page to company cover images such that on clicking it, will open the individual work page
	# Corrected image issues


19/08/2024

Make connection
	# Made Individual work page connection to rest - designation title and view button
	# checked working and corrected functioning


20/08/2024

Added Projects Page
	# Added Projects page 
	# Added new app Project and model Projects
	# All data fetched from this model
	# Need to create single projects page and connect it to buttons and images


21/08/2024

Added Individual Project section
	# Added new html template, views and urls which can open individual project page
	# Took out details from database and displayed in page.
	# Connected this page to project cover images such that on clicking it, will open the individual work page
	# Connected to Project page


22/08/2024

Added Articles page and Individual Articles Page
	# Added final Articles page and individual articles page
	# made connection with the rest of the pages and with each other.
	# Now website is completely responsive and functioning in local
	# need to check in postgres and RDS and deploy it via Heroku.

23/08/2024

Added Environment Variables
	# Added .env file with env variables and values
	# Added .gitignore file to ignore .env file

24/08/2024

Connected Postgres Locally
	# Connected to PostgreSQL locally.