@@ -50,7 +50,7 @@
 <div class="container">
     <br><br><br><br>
 
-    <h1 class="khand-semibold text-dark text-center" id="hover-section" >{{single_article.heading}}</h1>
+    <h1 class="khand-semibold text-dark text-center" >{{single_article.heading}}</h1>
 
     <div class="d-flex flex-row khand-regular justify-content-center" style="font-size: large;">
         <p class="text-monospace mr-2 border border-danger text-danger p-2 align-self-center rounded-pill">{{single_article.key_point}}</p>
