@@ -116,8 +116,12 @@
 <!-- Button section -->
 
 <div class="d-flex justify-content-center khand-medium text-dark">
+    {% if project.source_code_url %}
     <a href={{project.source_code_url}} class="btn btn-secondary btn-lg  mx-3 font-weight-bold" target="_blank">Source Code</a>
+    {% endif %}
+    {% if project.project_url %}
     <a href={{project.project_url}} class="btn btn-success btn-lg mx-3  font-weight-bold" target="_blank">Visit Site</a>
+    {% endif %}
 </div>
 
 
